--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,8 +16,16 @@ h1 {
   margin: 10px 25px;
   color: black;
 }
-
 h2 {
+  display: block;
+  text-align: center;
+  font-family: var(--heading-font-family);
+  font-weight: regular;
+  font-size: 34px;
+  margin: 10px 25px;
+  color: black;
+}
+h3 {
   font-family: var(--heading-font-family);
   display: block;
   text-align: center;
@@ -56,16 +64,55 @@ h2 {
   color: var(--text-color);
   opacity: 70%;
 }
-
-@media (max-width: 900px) {
+.header {
+  font-family: var(--heading-font-family);
+  font-weight: regular;
+  font-size: 42px;
+  margin: 10px 25px;
+  color: black;
+}
+.green-hs {
+  border-radius: 5px;
+}
+.social-links {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.links {
+  text-decoration: none;
+}
+.about-photos {
+  margin-top: 35px;
+}
+@media (max-width: 1200px) {
   h1 {
     font-size: 28px;
+    display: block;
+    text-align: center;
   }
-  h2 {
+  h2 h3 {
     font-size: 18px;
   }
   .reviews {
     font-size: 12px;
     padding: 0;
+  }
+  .green-hs {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  .about-text {
+    max-width: 100%;
+    text-align: center;
+    margin-top: 20px;
+  }
+}
+@media (max-width: 1200px) {
+  .denim-hs,
+  .purple-hs,
+  .black-hs {
+    margin: 0 auto;
+    padding: 10px;
   }
 }
