--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -85,6 +85,39 @@ h3 {
 .about-photos {
   margin-top: 35px;
 }
+.gallery-heading {
+  margin-bottom: 20px;
+}
+.top-hs {
+  width: 383px;
+  display: block;
+  margin: 0 auto;
+}
+.images {
+  margin: 10px 10px;
+  max-width: 475px;
+}
+
+.noah {
+  margin-top: -40px;
+}
+.catch-me {
+  margin-left: 70px;
+}
+.godspell {
+  margin-top: -295px;
+}
+.concert,
+.carousel {
+  border-radius: 5px;
+}
+.curtains {
+  margin-top: -85px;
+}
+.carmen {
+  margin-top: -80px;
+}
+
 @media (max-width: 1200px) {
   h1 {
     font-size: 28px;
@@ -111,8 +144,10 @@ h3 {
 @media (max-width: 1200px) {
   .denim-hs,
   .purple-hs,
-  .black-hs {
+  .black-hs,
+  .images {
     margin: 0 auto;
     padding: 10px;
+    display: block;
   }
 }
