--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -117,6 +117,10 @@ h3 {
 .carmen {
   margin-top: -80px;
 }
+.resume-photo {
+  display: block;
+  margin: 0 auto;
+}
 
 @media (max-width: 1200px) {
   h1 {
