--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -39,6 +39,21 @@ h4 {
   text-align: start;
   margin-top: 85px;
 }
+.navbar {
+  background-color: var(--secondary-color);
+  padding: 0;
+}
+.nav-item {
+  color: var(--text-color);
+}
+.navbar-nav {
+  margin-right: 10px;
+}
+.nav-link:hover,
+.active {
+  font-weight: bold;
+}
+
 .hero {
   position: relative;
 }
@@ -74,9 +89,18 @@ h4 {
 .header {
   font-family: var(--heading-font-family);
   font-weight: regular;
-  font-size: 42px;
-  margin: 10px 25px;
-  color: black;
+  font-size: 36px;
+  margin-left: 15px;
+  color: var(--text-color);
+}
+.heading {
+  font-family: var(--heading-font-family);
+  font-weight: regular;
+  font-size: 36px;
+  display: block;
+  text-align: center;
+  color: var(--text-color);
+  margin-top: 90px;
 }
 .green-hs {
   border-radius: 5px;
@@ -184,5 +208,8 @@ h4 {
   .contact-info {
     display: block;
     text-align: center;
+  }
+  .header {
+    font-size: 24px;
   }
 }
