--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -51,7 +51,7 @@ h4 {
 }
 .nav-link:hover,
 .active {
-  font-weight: bold;
+  font-weight: bold imo !important;
 }
 
 .hero {
@@ -167,7 +167,7 @@ h4 {
   color: var(--text-color);
 }
 .in-the-wings {
-  max-width: 450px;
+  max-width: 100%;
   margin-left: 45px;
 }
 
@@ -216,5 +216,10 @@ h4 {
   }
   .header {
     font-size: 24px;
+  }
+  .copyright {
+    display: block;
+    text-align: center;
+    margin-top: 10px;
   }
 }
